# telaradio

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLA.md  CLAUDE.md  Cargo.toml  Makefile  PHASE_0_REPORT.md  README.md  ROADMAP.md
.docs/ai/: current-state.md  decisions.md  next-steps.md  roadmap.md
.docs/ai/phases/: phase-1a-recipe-core-report.md  phase-1a-recipe-core-spec.md  phase-1b-model-adapter-report.md  phase-1b-model-adapter-spec.md  phase-1b2-ace-step-report.md  phase-1b2-ace-step-spec.md  phase-1c-am-modulation-report.md  phase-1c-am-modulation-spec.md  phase-1d-macos-player-report.md  phase-1d-macos-player-spec.md  phase-1d2-real-ace-step-report.md  phase-1d2-real-ace-step-spec.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  recipe_proposal.md
apple/: README.md
apple/Telaradio/: Package.swift
apple/Telaradio/.build/: build.db  debug.yaml
apple/Telaradio/.build/arm64-apple-macosx/debug/: description.json
apple/Telaradio/.build/arm64-apple-macosx/debug/ModuleCache/3LULTCZQZ8U1F/: AVFAudio-MFFJ6HCE9A7Z.pcm  Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  AudioToolbox-3FX4B654ICQE2.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  Carbon-3FMY3B0T5SZYU.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreAudio-J9DSWC1670R6.pcm  CoreAudioTypes-11649WXSRCA0E.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreMIDI-1WOF0UOPGOCPX.pcm  CoreMedia-SHYM2JB41P4U.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DataDetection-R5W4QHNMPWVH.pcm  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  MachO-20RPYVQSX341K.pcm  MediaToolbox-1P5YMSVDQUIJ6.pcm  Metal-1GCZV9N85NJOH.pcm  OSLog-218FBXNFJGY61.pcm  ObjectiveC-1G8H182PQX3QE.pcm  OpenGL-H89XJT7GTCP.pcm  QuartzCore-39A8LQKF980J1.pcm  Security-3QCVXOV25KK54.pcm  Spatial-1JZLH83HN83CS.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  SwiftUI-3DCHKT5UWXXCX.pcm  SwiftUICore-86HIVXUC6WOA.pcm  Symbols-3KC1789KJFX94.pcm  TelaradioFFI-ENH9PQH1TTWZ.pcm  UniformTypeIdentifiers-1OLJP4K3PLM48.pcm  (+26 more)
apple/Telaradio/.build/arm64-apple-macosx/debug/Modules/: Telaradio.swiftdoc  Telaradio.swiftmodule  Telaradio.swiftsourceinfo
apple/Telaradio/.build/arm64-apple-macosx/debug/Telaradio.build/: PlayerView.d  PlayerView.swiftdeps  PlayerViewModel.d  PlayerViewModel.swiftdeps  Telaradio.d  Telaradio.emit-module.d  Telaradio.swiftdeps  TelaradioApp.d  TelaradioApp.swiftdeps  master.priors  output-file-map.json  sources
apple/Telaradio/.build/arm64-apple-macosx/debug/Telaradio.dSYM/Contents/: Info.plist
apple/Telaradio/.build/arm64-apple-macosx/debug/Telaradio.product/: Objects.LinkFileList
apple/Telaradio/.build/arm64-apple-macosx/debug/index/db/v13/p38030--249f01/: lock.mdb
apple/Telaradio/.build/arm64-apple-macosx/debug/index/store/v5/records/1F/: Telaradio.swift-1A1778RNA8U1F
apple/Telaradio/.build/arm64-apple-macosx/debug/index/store/v5/records/BT/: Telaradio.swift-6EIJRZ439JBT
apple/Telaradio/.build/arm64-apple-macosx/debug/index/store/v5/units/: AVFAudio-MFFJ6HCE9A7Z.pcm-10GT84NDAOBFF  AVFoundation-7VNZZNFQDWLP.pcm-39UWEFGQYBA8Q  Accessibility-RCJSN2GG3RAR.pcm-1SAH3FMQPR7QS  AppKit-2VI8NB39I5AT6.pcm-2AEW9OTEH7R0T  ApplicationServices-3NXEUUZF9JJBD.pcm-3UJ9BRJPCQF9R  AudioToolbox-3FX4B654ICQE2.pcm-29W9D8TZY5XIA  CFNetwork-1PNPO1ORVQZLS.pcm-1TRB26XJ5GM6B  CUPS-1HLHMKUB322XA.pcm-TBTGEUGWVFH2  Carbon-3FMY3B0T5SZYU.pcm-1JFSS0GTO8MFL  ColorSync-3EIM4S8RXNRVI.pcm-3C6B6ZPSGFRT5  CoreAudio-J9DSWC1670R6.pcm-1UULYMG4KQI2W  CoreAudioTypes-11649WXSRCA0E.pcm-3LIJ6TA23V38R  CoreData-1KHK1L2CYC2N6.pcm-36BAZWUE1GHDB  CoreFoundation-16SA8WK3L6MQN.pcm-51M33CJ3782D  CoreGraphics-1PSDCAYCIV3T9.pcm-3IL4OS5UCBB4Q  CoreImage-39ZO87840M5PP.pcm-3PVD50JISIY1N  CoreMIDI-1WOF0UOPGOCPX.pcm-IPN9X9WNZBG9  CoreMedia-SHYM2JB41P4U.pcm-9LT0SJ4JIV4Q  CoreServices-39NCTJOEW7PQ2.pcm-2C34HZSWQWZBR  CoreText-3FAL1B4J38DIR.pcm-1GBD7515P2Q4N  CoreTransferable-27T896KGHFB3R.pcm-10IGR77YKJTF2  CoreVideo-DBBGB2LXU3HG.pcm-1GRH26H4QHWDJ  Darwin-1FXX23EKWOBA9.pcm-38LFW012IVNZR  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm-2AAWC154OZG2O  DiskArbitration-3LBJF5I58QD8.pcm-3R069UAQIT14W  Dispatch-R76HXUP80TVL.pcm-2GU2HZ5433R0B  Foundation-24LYWIP48SHNP.pcm-20MTJQDDPKUKW  IOKit-1IAL9NTK1TABA.pcm-14P4DPGD5BR6M  IOSurface-26455DPS9NDS0.pcm-B1TNAFG2LL9X  ImageIO-2ZSF831VT29UB.pcm-18OQMYI8E82ZB  MachO-20RPYVQSX341K.pcm-1GIGEYHJQVE7K  MediaToolbox-1P5YMSVDQUIJ6.pcm-1RXRIDWIOX3AL  Metal-1GCZV9N85NJOH.pcm-2A8P6QG2XYPSU  OSLog-218FBXNFJGY61.pcm-HG2L1JI7S4YH  ObjectiveC-1G8H182PQX3QE.pcm-3U8W3COJCATR0  OpenGL-H89XJT7GTCP.pcm-XM5XZ6DDWB3L  PlayerView.swift.o-6KTMWV7RENQW  PlayerViewModel.swift.o-286CMOBUJU6G8  QuartzCore-39A8LQKF980J1.pcm-1XOYS59QZ2RW9  Security-3QCVXOV25KK54.pcm-2UR5GPCCO1Q69  (+69 more)
apple/Telaradio/Sources/Telaradio/: ModelSettings.swift  ModelSetupView.swift  PlayerView.swift  PlayerViewModel.swift  Telaradio.swift  TelaradioApp.swift
apple/Telaradio/Sources/TelaradioFFI/: module.modulemap
apple/Telaradio/Sources/TelaradioFFI/include/: telaradio_ffi.h
core/: Cargo.toml  README.md
core/src/: audio.rs  error.rs  generator.rs  lib.rs  recipe.rs
core/tests/: audio.rs  generator.rs  recipe_parse.rs
dsp/: Cargo.toml  README.md
dsp/src/: am.rs  envelope.rs  lib.rs
dsp/tests/: am_apply.rs
ffi/: Cargo.toml  build.rs  cbindgen.toml
ffi/src/: lib.rs
ffi/tests/: ffi_round_trips.rs
model-adapter/: Cargo.toml  README.md
model-adapter/python/: pyproject.toml  telaradio_ace_step.py  telaradio_subprocess.py
model-adapter/src/: ace_step.rs  hf_download.rs  ipc.rs  lib.rs  model_install.rs  protocol.rs  subprocess.rs
model-adapter/tests/: ace_step_e2e.rs  ace_step_smoke.rs  dsp_pipeline.rs  end_to_end.rs  hf_download_test.rs  model_install_test.rs  protocol_serde.rs
recipes/: README.md  example-foggy-lofi.json
web/: README.md
(+5 files in other folders)
