[workspace]
resolver = "2"
members = ["core"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/TaylorFinklea/lockstep"
authors = ["Taylor Finklea <taylor.finklea@gmail.com>"]
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
