[workspace]
resolver = "2"
members = ["core", "model-adapter"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/TaylorFinklea/telaradio"
authors = ["Taylor Finklea <taylor.finklea@gmail.com>"]
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
hound = "3"
tempfile = "3"
# Phase 1b2: Hugging Face download (resumable HTTP) + sha256 manifest validation.
# rustls-tls keeps openssl off the dependency surface; blocking client because
# our caller (`Generator::generate`) is sync-by-design — see
# `core::generator` docstring.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "stream"] }
sha2 = "0.10"
httpmock = "0.7"
telaradio-core = { path = "core" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
