[package]
name = "telaradio-dsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Telaradio DSP: amplitude modulation per Woods et al. 2024 §Methods."

[dependencies]
telaradio-core.workspace = true

[lints]
workspace = true
