[package]
name = "telaradio-model-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Telaradio model adapter: Generator trait impls (Phase 1b: mock Python subprocess; Phase 1b2: ACE-Step)."

[dependencies]
telaradio-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hound.workspace = true
tempfile.workspace = true

[lints]
workspace = true
